--- a/Telco_Customer_Churn_v3.ipynb
+++ b/Telco_Customer_Churn_v3.ipynb
@@ -5,7 +5,7 @@
    "id": "4221d981",
    "metadata": {},
    "source": [
-    "########################################### Patrick Mthisi ####################################################\n",
+    "########################################### Patrick Mthisi ##############################################\n",
     "\n",
     "# Telco Customer Churn Prediction:\n",
     "\n",
