--- a/Telco_Customer_Churn_v3.ipynb
+++ b/Telco_Customer_Churn_v3.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Inspiration:\n",
     "\n",
-    "To explore this type of models and learn more about the subject."
+    "To explore these type of models and learn more about the subject."
    ]
   },
   {
