--- a/Telco_Customer_Churn_Scorecard_Development.ipynb
+++ b/Telco_Customer_Churn_Scorecard_Development.ipynb
@@ -36,7 +36,7 @@
     "- The feature engineering techniques employed entail binning all variables and selecting the most predictive variables based on their IV and Gini coefficients.\n",
     "- A weight of evidence (WoE) feature transformation is applied to the selected variables before being incorporated into the customer churn scorecard.\n",
     "- Customers are grouped into deciles based on the probability of churn.\n",
-    "- The stability of the scorecard is assessed using the PSI and CSI measured on the test dataset, which proxies the evolved data."
+    "- The stability of the scorecard is assessed using the PSI and CSI measured on the evaluation dataset, which proxies the evolved data."
    ]
   },
   {
